--- a/packages/api/.babelrc
+++ b/packages/api/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["env", "stage-0"]
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": {
+        "node": "current"
+      }
+    }]
+  ],
+  "plugins": [
+    ["@babel/plugin-proposal-class-properties", { "loose": false }]
+  ]
 }
