--- a/packages/api/.eslintrc.json
+++ b/packages/api/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-    "extends": "airbnb-base"
+    "parser": "babel-eslint",
+    "extends": "airbnb-base",
+    "rules": {
+        "object-curly-newline":"off"
+    }
 }
