--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,11 +22,14 @@
 		"pg": "^7.7.1"
 	},
 	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-stage-0": "^6.24.1",
-		"eslint": "^4.19.1",
-		"eslint-config-airbnb-base": "^13.0.0",
+		"@babel/cli": "^7.1.0",
+		"@babel/core": "^7.1.0",
+		"@babel/node": "^7.1.0",
+		"@babel/plugin-proposal-class-properties": "^7.2.1",
+		"@babel/preset-env": "^7.1.0",
+		"babel-eslint": "^10.0.1",
+		"eslint": "^5.10.0",
+		"eslint-config-airbnb-base": "^13.1.0",
 		"eslint-plugin-import": "^2.13.0"
 	}
 }
