--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,15 +11,18 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.18.0",
-		"bcrypt": "^3.0.0",
+		"bcrypt": "^3.0.2",
 		"body-parser": "^1.18.3",
 		"express": "^4.16.3",
 		"helmet": "^3.13.0",
 		"jsonwebtoken": "^8.3.0",
-		"knex": "^0.15.2",
+		"objection": "^1.4.0",
+		"knex": "^0.16.1-next2",
 		"morgan": "^1.9.1",
 		"multer": "^1.3.1",
-		"pg": "^7.7.1"
+		"pg": "^7.7.1",
+		"decamelize-keys": "^1.1.0",
+		"camelcase-keys": "^5.0.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.1.0",
