--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
   api:
     build: .
     volumes:
-      - .:/usr/src/app/
+      - .:/usr/src/app/:cached
+      - /usr/src/app/packages/api/node_modules/
     ports:
       - '8080:80'
     environment:
