--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,8 @@
 		"multer": "^1.3.1",
 		"pg": "^7.7.1",
 		"decamelize-keys": "^1.1.0",
-		"camelcase-keys": "^5.0.0"
+		"camelcase-keys": "^5.0.0",
+		"swagger-ui-express": "^4.0.1"
 	},
 	"devDependencies": {
 		"eslint": "^5.10.0",
