--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,16 +13,18 @@
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.2",
 		"body-parser": "^1.18.3",
+		"camelcase-keys": "^5.0.0",
+		"decamelize-keys": "^1.1.0",
 		"express": "^4.16.3",
 		"helmet": "^3.13.0",
+		"joi": "^14.3.0",
 		"jsonwebtoken": "^8.3.0",
-		"objection": "^1.4.0",
 		"knex": "^0.16.1-next2",
 		"morgan": "^1.9.1",
 		"multer": "^1.3.1",
+		"objection": "^1.4.0",
+		"objection-db-errors": "^1.0.0",
 		"pg": "^7.7.1",
-		"decamelize-keys": "^1.1.0",
-		"camelcase-keys": "^5.0.0",
 		"swagger-ui-express": "^4.0.1"
 	},
 	"devDependencies": {
