jest test support and samples added

--- a/packages/api/.eslintrc.json
+++ b/packages/api/.eslintrc.json
@@ -2,5 +2,8 @@
     "extends": ["airbnb-base", "plugin:node/recommended"],
     "rules": {
         "object-curly-newline":"off"
+    },
+    "env": {
+        "jest": true
     }
 }
