--- a/packages/api/.eslintrc.json
+++ b/packages/api/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-    "extends": ["airbnb-base", "plugin:node/recommended"],
-    "rules": {
-        "object-curly-newline":"off"
-    }
+  "root": true,
+  "extends": ["airbnb-base", "plugin:node/recommended"],
+  "rules": {
+    "object-curly-newline": "off"
+  }
 }
