--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -1,12 +1,20 @@
 {
-    "extends": "airbnb",
-    "plugins": [
-        "import"
+  "root": true,
+  "extends": "airbnb",
+  "plugins": ["import"],
+  "env": {
+    "browser": true
+  },
+  "rules": {
+    "react/jsx-filename-extension": [
+      "error",
+      { "extensions": [".js", ".jsx"] }
     ],
-    "settings": {
-        "import/resolver": {
-            "babel-module": {
-            }
-        }
+    "react/prefer-stateless-function": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
     }
+  }
 }
