--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,4 +1,7 @@
 {
+	"scripts": {
+		"start": "./node_modules/.bin/parcel index.html"
+	},
 	"dependencies": {
 		"antd": "^3.6.5",
 		"autoprefixer": "^8.6.5",
