--- a/packages/api/.eslintrc.json
+++ b/packages/api/.eslintrc.json
@@ -1,9 +1,10 @@
 {
-    "extends": ["airbnb-base", "plugin:node/recommended"],
-    "rules": {
-        "object-curly-newline":"off"
-    },
-    "env": {
-        "jest": true
-    }
+  "root": true,
+  "extends": ["airbnb-base", "plugin:node/recommended"],
+  "rules": {
+    "object-curly-newline": "off"
+  },
+  "env": {
+      "jest": true
+  }
 }
