git hook file change tracker added
It works After the merge (post-merge)

Sample;
case: if dockerfile changed then rebuild docker container

1.) open ./scripts/file-watcher.sh
2.) add this code to the last line of file
    ```
    # $1 descdescription
    # $2 tracked file
    # $3 action
    check_run "Main dockerfile" "dockerfile" "docker-compose build";
    ```

--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
   },
   "author": "Yusuf YILDIRIM",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "husky": "^1.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "post-merge": "./scripts/file-watcher.sh"
+    }
+  }
 }
