--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,6 +18,7 @@
 		"bcrypt": "^3.0.2",
 		"body-parser": "^1.18.3",
 		"camelcase-keys": "^5.0.0",
+		"connect-timeout": "^1.9.0",
 		"decamelize-keys": "^1.1.0",
 		"express": "^4.16.3",
 		"helmet": "^3.13.0",
@@ -28,7 +29,10 @@
 		"multer": "^1.3.1",
 		"objection": "^1.4.0",
 		"objection-db-errors": "^1.0.0",
+		"objection-soft-delete": "^1.0.5",
+		"objection-visibility": "^0.4.0",
 		"pg": "^7.7.1",
+		"redis": "^2.8.0",
 		"swagger-ui-express": "^4.0.1"
 	},
 	"devDependencies": {
